<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyling">

    <LinearLayout style="@style/ProductDetailsHolderStyle">

        <ImageView
            android:id="@+id/edit_product_photo"
            style="@style/PhotoOfProduct" />

        <View style="@style/SeparatorStyling" />

        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                style="@style/LabelsStyling"
                android:text="@string/product_name_label" />

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditProductNameStyling" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                style="@style/LabelsStyling"
                android:text="@string/price_label" />

            <TextView style="@style/LocalCurrencyEditPriceStyling" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditPriceStyling" />
        </LinearLayout>

        <View style="@style/SeparatorStyling" />

        <TextView style="@style/AvailableQuantityStyling" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/decrease_button"
                style="@style/IncreaseDecreaseButtonsStyling"
                android:text="-" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditQuantityStyling" />

            <Button
                android:id="@+id/increase_button"
                style="@style/IncreaseDecreaseButtonsStyling"
                android:layout_alignParentRight="true"
                android:text="+" />

        </RelativeLayout>

        <View style="@style/SeparatorStyling" />

        <TextView style="@style/RestockTitleStyling" />

        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                style="@style/LabelsStyling"
                android:text="@string/suppliers_name_label" />

            <EditText
                android:id="@+id/edit_suppliers_name"
                style="@style/EditSupplierStyling" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                style="@style/LabelsStyling"
                android:text="@string/suppliers_email_label" />

            <EditText
                android:id="@+id/edit_suppliers_email"
                style="@style/EditSupplierEmailStyling" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                style="@style/LabelsStyling"
                android:text="@string/restock_quantity_label" />

            <EditText
                android:id="@+id/edit_restock_quantity"
                style="@style/EditRestockQuantityStyling" />
        </LinearLayout>

        <Button
            android:id="@+id/order_restock_button"
            style="@style/RestockButtonStyling" />

    </LinearLayout>
</ScrollView>